<resources>

    <string name="app_name" translatable="false">GeoPath</string>

    <string name="loading">Loading…</string>

    <string name="from_hint">From…</string>
    <string name="to_hint">To…</string>
    <string name="middle_hint">Middle…</string>

    <string name="close_btn_description">Close Button</string>
    <string name="middle_btn">Add middle point</string>
    <string name="start_btn">Start</string>

    <string name="menu_str_clear_map">Clear map</string>
    <string name="menu_str_history">History</string>
    <string name="menu_str_clear_history">Clear history</string>
    <string name="connection_str">Connection…</string>
    <string name="history_str">History</string>
    <string name="toast_warning_while_loading">Wait until loading will be completed</string>
    <string name="toast_choose_start_point">Choose start point</string>
    <string name="toast_choose_destination_point">Choose destination point</string>
    <string name="toast_over_three_middle_points">You can add only 3 middle points</string>
    <string name="metric_system_meters">" m"</string>
    <string name="metric_system_kilometers">" km"</string>
    <string name="toast_empty_history">History is empty!</string>
    <string name="cancel_alert_dialog_button">Cancel</string>
    <string name="menu_button">Menu</string>

</resources>
