<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.woxapp.task.geopath.MainActivity">

    <FrameLayout
        android:id="@+id/fieldsLoaderContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:id="@+id/fieldsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >

            <RelativeLayout
                android:id="@+id/addFromTextContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height"
                android:background="@color/white"
                >

                <FrameLayout
                    android:id="@+id/fromCancel"
                    style="@style/CancelButtonContainer"
                    android:visibility="invisible"
                    >

                    <ImageView style="@style/CancelButton"
                        android:contentDescription="@string/close_btn_description"/>

                </FrameLayout>

                <AutoCompleteTextView
                    android:id="@+id/addFrom"
                    style="@style/AutoComplete"
                    android:hint="@string/from_hint"
                    android:layout_toStartOf="@id/fromCancel"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/addToTextContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height"
                android:background="@color/grey"
                >

                <FrameLayout
                    android:id="@+id/toCancel"
                    style="@style/CancelButtonContainer"
                    android:visibility="invisible"
                    >

                    <ImageView style="@style/CancelButton"
                        android:contentDescription="@string/close_btn_description" />

                </FrameLayout>

                <AutoCompleteTextView
                    android:id="@+id/addTo"
                    style="@style/AutoComplete"
                    android:hint="@string/to_hint"
                    android:layout_toStartOf="@id/toCancel"
                    />

            </RelativeLayout>

            <FrameLayout
                android:id="@+id/addMiddleContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/field_height"
                >

                <Button
                    android:id="@+id/addMiddleButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/middle_btn"
                    android:background="@color/blueGrey"
                    />

                <RelativeLayout
                    android:id="@+id/addMiddleTextContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:visibility="invisible"
                    >

                    <FrameLayout
                        android:id="@+id/middleCancel"
                        style="@style/CancelButtonContainer"
                        >

                    <ImageView style="@style/CancelButton"
                        android:contentDescription="@string/close_btn_description" />

                    </FrameLayout>

                    <AutoCompleteTextView
                        android:id="@+id/addMiddle"
                        style="@style/AutoComplete"
                        android:hint="@string/middle_hint"
                        android:layout_toStartOf="@id/middleCancel"
                        />

                </RelativeLayout>

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@color/blueGrey"
                tools:ignore="ButtonStyle"
                >

                <Button
                    android:id="@+id/menuButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/menu_button"
                    android:background="@color/blueGre2"
                    android:layout_weight="1"
                    android:layout_marginEnd="0.5dp"
                     />

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_btn"
                    android:background="@color/blueGre2"
                    android:layout_weight="1"
                    android:layout_marginStart="0.5dp"
                    />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/loader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:background="@color/blueGre2"
            android:visibility="visible"
            >

            <ProgressBar
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/loaderText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/connection_str"
                />

        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/fieldsLoaderContainer"
        >

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            />

        <TextView
            android:id="@+id/distanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            />

    </FrameLayout>


</RelativeLayout>
